# pdfme

./: .clinerules  .clinerules.en  .eslintrc.js  .gitignore  .gitmodules  .npmignore  .oxfmtrc.json  .oxlintrc.json  .prettierrc.js  .repomixignore  .stylelintignore  .yarnrc.yml  404.html  CLAUDE.md  DEPENDABOT_PR_REPORT.md  DEVELOPMENT.md  IMPLEMENTATION_REPORT.md  LICENSE  LICENSE.md  LIST-PLAN.md  MEMO.md  MIGRATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE.md  PLAN.md  PLAYGROUND-PLAN.md  PROGRESS.md  README.md  RELEASE.md  REVIEW.md  TODO.md  assetsTransformer.js  blog.html  declaration.d.ts  demo.html  dynamictable.excalidraw  eslint.base.js  eslint.config.mjs  eslint.typecheck.config.mjs  fix-color-v5.sh  (+25 more)
.devcontainer/: devcontainer.json  init.bash
.github/: FUNDING.yml  dependabot.yml
.storybook/: main.js  webpack.config.js
__tests__/: generate.test.ts
assets/: CodeEditor-B20g4mC8.js  CodeEditor-B20g4mC8.js.map  CodeEditor-BDimg7tN.js  CodeEditor-BDimg7tN.js.map  CodeEditor-BIUlDVlO.js  CodeEditor-BIUlDVlO.js.map  CodeEditor-BqPVwgwF.js  CodeEditor-BqPVwgwF.js.map  CodeEditor-C2hL3_dU.js  CodeEditor-C2hL3_dU.js.map  CodeEditor-C8GdgLQ_.js  CodeEditor-C8GdgLQ_.js.map  CodeEditor-CA6EPijn.js  CodeEditor-CA6EPijn.js.map  CodeEditor-CD6lYXxo.js  CodeEditor-CD6lYXxo.js.map  CodeEditor-CYGC2yNc.js  CodeEditor-CYGC2yNc.js.map  CodeEditor-Cf7CxqP_.js  CodeEditor-Cf7CxqP_.js.map  CodeEditor-CfUMXOBx.js  CodeEditor-CfUMXOBx.js.map  (+958 more)
prototype-rust-wasm/: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  Makefile  QUICKSTART.md  README.md  build-wasm.sh  demo-browser.html  demo-node.js  test-full.js  test-simple.js
prototype-rust-wasm/python-binding/: Cargo.toml  demo.py  pyproject.toml
prototype-rust-wasm/python-binding/src/: lib.rs
prototype-rust-wasm/src/: lib.rs
(+1721 files in other folders)
