[package]
name = "pdfme-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# PDF生成
lopdf = "0.32"
printpdf = "0.7"

# シリアライゼーション
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Wasmバインディング
wasm-bindgen = "0.2"
js-sys = "0.3"

# エラーハンドリング
thiserror = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"     # 最小サイズ最適化
lto = true          # Link Time Optimization
codegen-units = 1   # さらなる最適化
strip = true        # シンボル除去
