[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pdfme"
version = "0.1.0"
description = "PDF generation library powered by Rust - Python bindings"
authors = [
    { name = "PDFme Contributors" }
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "pdfme._native"
